--- a/frontend/src/assets/style/layout.scss
+++ b/frontend/src/assets/style/layout.scss
@@ -134,6 +134,86 @@ body::-webkit-scrollbar {
   cursor: pointer;
 }
 
+.stats-sidebar::-webkit-scrollbar {
+  display: none;
+}
+
+.stats-sidebar {
+  height: 100%;
+  width: 250px;
+  background: black;
+  position: fixed;
+  right: 0px;
+
+  z-index: 1000;
+  overflow-y: scroll;
+  display: flex;
+  flex-direction: column;
+  overflow-x: hidden;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-bottom: 200px;
+  background-color: $menu-background;
+  -webkit-box-shadow: -8px 1px 5px 4px rgba(0, 0, 0, 0.9);
+
+
+  .back {
+
+    cursor: pointer;
+    width: 95%;
+    margin-left: 10px;
+    width: 100%;
+
+    .icon {
+      float: left;
+      margin-top: 5px;
+    }
+
+    .text {
+      margin-left: 30px;
+      margin-top: 3px;
+    }
+  }
+
+  .title {
+    font-size: 1.1em;
+    color: $c-teal;
+    margin-bottom: -2px;
+    padding-left: 10px;
+    margin-top: 10px;
+    width: 100%;
+
+    .icon {
+      float: left;
+    }
+
+    .text {
+      margin-left: 30px;
+    }
+  }
+
+  .stats-item {
+    padding-left: 10px;
+    margin-bottom: -2px;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    font-size: 0.8em;
+
+    .label {
+      color: $c-orange;
+    }
+
+    .value {
+      margin-left: 10px;
+      padding-right: 10px;
+      word-break: break-all;
+      text-align: right;
+      flex-grow: 1;
+    }
+  }
+}
+
 
 #border {
   // z-index: 1001;
@@ -1204,7 +1284,12 @@ button {
     }
 
     .server:hover {
-      background: $list-hover;
+      // background: $list-hover;
+      border-bottom: 1px solid $c-teal;
+
+      .tag {
+        color: $c-teal
+      }
     }
 
 
@@ -1248,17 +1333,19 @@ button {
 
     .server {
       // border-bottom: $list-item-border;
-      height: 30px;
+      height: 26px;
       width: 100%;
 
       // background: #171A1E;
-      padding-top: 6px;
+      margin-top: 3px;
+      padding-top: 2px;
+      // padding-top: 6px;
       cursor: pointer;
 
       .country-flag {
         display: inline-block;
         width: 23px;
-        margin-top: 3px;
+        margin-top: 2px;
         height: auto;
         vertical-align: middle;
         border: 0px solid #80808063;
@@ -1281,27 +1368,32 @@ button {
         text-align: center;
         float: left;
         font-size: 0.9em;
+        align-items: center;
 
         .icon {
           color: $c-teal;
           height: 20px;
           width: auto;
-          margin-bottom: -2px;
+          margin-bottom: -5px;
           margin-right: 5px;
           margin-left: -10px;
 
         }
 
-        .flag {
-          float: left;
-          width: 40px;
-        }
+        // .flag {
+        //   float: left;
+        //   // width: 40px;
+        //   height: 17px;
+        //   width: 30px;
+        //   float: left;
+        //   margin-top: 5px;
+        // }
 
         .text {
           float: left;
 
           width: 40px;
-          padding-top: 4px;
+          padding-top: 6px;
         }
       }
 
@@ -1366,6 +1458,7 @@ button {
       .x3 {
         min-width: 75px;
         max-width: 75px;
+        padding-top: 3px;
       }
 
     }
@@ -1460,29 +1553,27 @@ button {
     }
 
     .server:hover {
-      background: #49ffc827;
+      // background: $list-hover;
+      border-bottom: 1px solid $c-teal;
 
-      // border: 1px solid $c-teal-border;
-      .connect {
-        display: block;
+      .ip {
+        color: $c-teal
       }
 
     }
 
-    .server:last-child {
-      border: none;
-      // border-radius: 0px 0px 12px 12px;
-    }
 
 
     .server {
       // border-bottom: 1px solid rgba(128, 128, 128, 0.322);
-      height: 30px;
+      height: 26px;
       width: 100%;
       cursor: pointer;
+      margin-top: 3px;
+      padding-top: 2px;
 
       // background: #171A1E;
-      padding-top: 6px;
+      // padding-top: 6px;
 
       .country-item {
         padding-left: 10px;
@@ -1491,7 +1582,6 @@ button {
         .flag {
           height: 17px;
           width: 30px;
-          // margin-left: 18px;
           float: left;
           margin-top: 4px;
         }
@@ -1516,6 +1606,18 @@ button {
         text-align: center;
         float: left;
         font-size: 1em;
+        align-items: center;
+
+
+        .icon {
+          color: $c-teal;
+          height: 20px;
+          width: auto;
+          margin-bottom: -5px;
+          margin-right: 5px;
+          margin-left: -10px;
+
+        }
 
         .text {
           float: left;
@@ -1879,6 +1981,11 @@ button {
 
   }
 
+  .blocking-toggles {
+    display: flex;
+    gap: 30px;
+  }
+
   .link-color {
     color: $c-orange !important;
     cursor: pointer;
@@ -1889,6 +1996,11 @@ button {
   }
 
 
+  .warning-color {
+    cursor: pointer;
+    color: $c-warning-red !important;
+
+  }
 
 
 
