reworking the dashboard and router list

--- a/frontend/src/assets/style/layout.scss
+++ b/frontend/src/assets/style/layout.scss
@@ -1087,83 +1087,91 @@ button {
     flex-direction: row;
     align-items: flex-start;
     flex-wrap: wrap;
-    position: absolute;
+    position: relative;
     left: 10px;
-    top: 70px;
+    // top: 70px;
+    margin-left: 15px;
+    gap: 10px;
+    margin-top: 20px;
+    margin-bottom: 30px;
 
     width: fit-content;
     height: auto;
-    margin-top: 00px;
     justify-content: left;
 
     .item:hover {
       // background: #49ffc827;
 
-      .flag {
-
-        // border: 3px solid $c-teal;
-      }
-
-      .code {
-        // font-size: 1.1em !important;
-        display: none;
-      }
-
-      .connect {
-        display: block;
-      }
-
-      .disconnect {
-        display: block !important;
-      }
-
-      .connected-flag {
-        // border: 3px solid $c-red !important;
+      .info {
+        .tag {
+          color: $c-teal;
+        }
       }
 
     }
 
+    .connected {
+      border: 2px solid $c-teal !important;
+
+    }
+
+
+
+
     .item {
-      width: 120px;
-      height: 126px;
+      width: fit-content;
+      height: fit-content;
       cursor: pointer;
+      padding: 10px;
+      min-width: 250px;
       // border-radius: 10px;
       order: 0;
-      margin-bottom: 25px;
-      margin-left: 15px;
-      margin-right: 15px;
+      // margin-bottom: 25px;
+      // margin-left: 15px;
+      // margin-right: 15px;
       display: flex;
-      position: relative;
-      top: 0;
-      left: 0;
-      background: #47474a80;
-      // background: rgba(23, 26, 30, 0.8);
-      // box-shadow: 12px 17px 75px rgba(0, 0, 0, 0.25);
+      flex-direction: row;
+      background: $menu-background;
+      // gap: 10px;
+
+
+      .icon {
+        height: 50px;
+        width: auto;
+        margin-top: -3px;
+        color: rgb(182, 182, 182);
+      }
 
       .flag {
         box-sizing: border-box;
-        width: 90px;
+        width: 60px;
         height: auto;
-        // border: 1px solid #000000;
-        // border-radius: 10px;
-        position: absolute;
-        top: 18px;
-        left: 15px;
-        box-shadow: 0 4px 4px #00000040, 4px 4px 7px 1px #00000040;
       }
 
-      .code {
-        width: 121px;
-        height: 30px;
-        text-align: center;
-        color: #fff;
-        font-size: 1.2em;
+      .info {
+        display: flex;
+        flex-direction: column;
+        padding-left: 10px;
+        padding-top: 2px;
 
-        line-height: 1;
-        position: absolute;
-        top: 98px;
-        left: 0;
+        .tag {
+          width: 100%;
+          height: 20px;
+          color: #fff;
+          font-size: 1.1em;
+          line-height: 1;
+        }
+
+        .score {
+          padding-top: 3px;
+          font-size: 0.8em;
+          color: gray;
+        }
+
       }
+
+
+
 
       .connected-flag {
         // border: 3px solid $c-teal !important;
