--- a/frontend/src/assets/style/variables.scss
+++ b/frontend/src/assets/style/variables.scss
@@ -15,6 +15,7 @@ $log-warning: yellow;
 $c-teal-hover: #20C997;
 $c-teal-border: #3AF4BD;
 $c-teal: #28ad85;
+$c-teal-dimmed: #255d4c;
 
 
 $c-lightblue: #20bec9;
