adding offline indicator for simple mode

--- a/frontend/src/assets/style/layout.scss
+++ b/frontend/src/assets/style/layout.scss
@@ -1168,6 +1168,11 @@ button {
           color: gray;
         }
 
+        .offline {
+          color: rgb(151, 41, 41);
+          font-weight: bold;
+        }
+
       }
 
 
