--- a/frontend/src/assets/style/layout.scss
+++ b/frontend/src/assets/style/layout.scss
@@ -1934,6 +1934,7 @@ button {
 			padding: 0px 0px 0px 0px;
 			font-size: 1em;
 			border-bottom: 1px solid #8080805e;
+			color: white;
 		}
 
 		.orange {
